    - Check existence of search criteria in Dpkg::Index when checking with a
      regex or a string match. Closes: #780906
      Base on a patch by Daniel Dehennin <daniel.dehennin@baby-gnu.org>.
  * Build system:
    - Fix building development documentation.
    - Remove unused UA_LIBS variable.
    - Split libps and libkvm detection into their own macros and variables.
  * Test suite:
    - Add a unit test to compile perl code with warnings.
    - Add a unit test for the trigger deferred parser.
  * Documentation:
    - Say value instead of option in deb-control(5).
    - Mark debian changelog format in bold in dpkg-parsechangelog(1).
    - Add references to man pages describing file formats.
    - Document missing Install-Size, Built-For-Profiles and Build-Profiles
      fields in man pages.
    - Add new dsc(5), deb-changelog(5) and deb-changes(5) man pages.
    - Remove Debian specific policy references.
    - Remove superfluous SEE ALSO references from dpkg-source(1).
    - Fix --remove and --purge summary formatting in dpkg(1).
    - Move --audit description just after --verify in dpkg(1).
    - Mark Maintainer field as bold in deb-src-control(5).
    - Fix reference to --record-avail instead of inexistent --avail.
    - Add missing quotes in man pages.
    - Document Source field version in deb-control(5).
    - Add new deb822(5) man page.
    - Document and improve C/C++ programs exit codes in man pages.
    - Clarify dpkg --path-exclude/--path-include pathname filter behavior.
      Closes: #811267
    - Clarify that packages are only automatically forgotten by dpkg if they
      contain no user data, such as package selections. Closes: #813179
    - Fix documentation for package flags in dpkg(1).
    - Clarify that deb-symbols(5) documents the binary format subset, and
      the template symbol files are described in dpkg-gensymbols(1).
      Closes: #795163
    - Update field requirements of control file formats to match dpkg reality.