@@ -74,6 +74,7 @@ dpkg (1.18.5) UNRELEASED; urgency=medium
     - Fix building development documentation.
     - Remove unused UA_LIBS variable.
     - Split libps and libkvm detection into their own macros and variables.
+    - Make it possible to build without system libmd.
   * Test suite:
     - Add a unit test to compile perl code with warnings.
     - Add a unit test for the trigger deferred parser.
